[tool.poetry]
name = "pyqt-sudoku"
version = "0.1.0"
description = ""
authors = ["Jon Moore"]
readme = "README.md"
packages = [{include = "pyqt_sudoku"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.9"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
